--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && move build docs",
+    "build": "rmdir /s /q docs && react-scripts build && move build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
